# python-google-palm

./: 01-basic.ipynb  Makefile  env.sample  pyproject.toml
